2009-05-05 Magnus Hagdorn
 * src/fortran/eis_glide.F90: get elapsed wall clock time
 * src/fortran/eismint3_glide.F90: ditto
 * src/fortran/glex_ebm.F90: ditto
 * src/fortran/glint_example.F90: ditto
 * src/fortran/simple_glide.F90: ditto
 * src/fortran/glimmer_writestats.F90: add wall clock time to list of arguments
 * src/fortran/test_writestats.F90: pass wall clock time
 * src/fortran/writestats.c: also store wall clock time in results file
 * src/fortran/writestats.h: update prototype

2009-05-05 Magnus Hagdorn
 * m4macros/netcdf.m4: minor improvement
 * src/fortran/Makefile.am: forgot to add NETCDF_LDFLAGS

2009-04-29 Magnus Hagdorn
 * Makefile.am: distribute bootstrap
 * configure.in: use new macros to find netcdf and module include switch
 * glimmer-config.in: rename variable
 * m4macros/ax_f90_module_flag.m4: imported macro to find module inclusion
   flag
 * m4macros/hdf5.m4: new module to find hdf5 (might be required for netcdf)
 * m4macros/netcdf.m4: new module for finding netCDF
 * src/fortran/Makefile.am: renamed some flags

2009-04-17 Magnus Hagdorn
 * INSTALL: mention how to customise SGE script
 * src/python/glide_launch.py: use popen instead of subprocess so it works
   with older python versions

2009-04-17 Magnus Hagdorn
 * src/python/Makefile.am: install new file
 * src/python/glide_launch.py: modernise; add option to submit job to SGE
 * src/python/qsub_glide.sh: simple wrapper script for submitting jobs to SGE

2009-04-10 Magnus Hagdorn
 * configure.in: figure out C compiler and how to use cfortran.h
 * src/fortran/Makefile.am: add new targets
 * src/fortran/cfortran.h: add cfortran.h v 4.3
 * src/fortran/eis_glide.F90: write run statistics to file
 * src/fortran/eismint3_glide.F90: ditto
 * src/fortran/glex_ebm.F90: ditto
 * src/fortran/glint_example.F90: ditto
 * src/fortran/simple_glide.F90: ditto
 * src/fortran/glimmer_commandline.F90: get name of results file from 
   command line
 * src/fortran/glint_commandline.F90: ditto