@@ -165,14 +165,14 @@ AC_ARG_ENABLE(tests, AS_HELP_STRING([--enable-tests],[Run short tests]),
 esac],[AC_MSG_RESULT([no])])
 AM_CONDITIONAL([RUN_TESTS], [test "$enable_tests" == "yes"])
 
-# Checking if sources are from CVS
-AC_CHECK_FILE($srcdir/src/fortran/CVS/Entries,have_cvs_entries="yes",have_cvs_entries="no")
-GLIMMER_CVS_VERS=""
-if test "$have_cvs_entries" == "yes"; then
-   GLIMMER_CVS_VERS=" cvs_vers_string"
+# Checking if sources are from subversion
+AC_CHECK_FILE($srcdir/src/fortran/.svn/entries,have_svn_entries="yes",have_svn_entries="no")
+GLIMMER_SVN_VERS=""
+if test "$have_svn_entries" == "yes"; then
+   GLIMMER_SVN_VERS=" svn_vers_string"
 fi
-AC_SUBST(GLIMMER_CVS_VERS)
-AM_CONDITIONAL([HAVE_CVS],[test "$have_cvs_entries" == "yes"])
+AC_SUBST(GLIMMER_SVN_VERS)
+AM_CONDITIONAL([HAVE_SVN],[test "$have_svn_entries" == "yes"])
 
 AC_CONFIG_FILES([Makefile m4macros/Makefile src/Makefile src/python/Makefile src/fortran/Makefile src/fortran/SLAP_library/Makefile \
 		tests/Makefile])
