@@ -41,7 +41,7 @@ libglimmer_a_SOURCES = glimmer_vers.F90 glimmer_commandline.F90 \
                        glimmer_restart_statscal.F90 glimmer_restart_statarr.F90 \
                        glimmer_restart_pointarr.F90 glimmer_anomcouple.F90 \
                        $(RESTART_INCS) glimmer_restart.F90 glimmer_filenames.F90 \
-                       glimmer_writestats.F90 writestats.c writestats.h
+                       glimmer_writestats.F90 writestats.c writestats.h cfortran.h
 nodist_libglimmer_a_SOURCES = glimmer_vers.F90
 libglide_a_SOURCES = glide.F90 glide_setup.F90 glide_types.F90 glide_temp.F90 \
                      glide_thck.F90 glide_velo.F90 glide_mask.F90 \
@@ -65,32 +65,32 @@ libclimate_a_SOURCES = eismint3_forcing.F90 eismint3_types.F90 \
 
 eismint3_glide_SOURCES = eismint3_glide.F90
 eismint3_glide_LDADD = libclimate.a libglide.a libglimmer.a \
-                       SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(NETCDF_LIBS)
+                       SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 simple_glide_SOURCES = simple_glide.F90 
 simple_glide_LDADD = libclimate.a libglide.a libglimmer.a \
-                     SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(NETCDF_LIBS)
+                     SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 eis_glide_SOURCES = eis_glide.F90
-eis_glide_LDADD = libclimate.a libglide.a libglimmer.a SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(NETCDF_LIBS)
+eis_glide_LDADD = libclimate.a libglide.a libglimmer.a SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 glint_example_SOURCES = glint_example.F90
-glint_example_LDADD = libglint.a libglide.a libglimmer.a SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(NETCDF_LIBS)
+glint_example_LDADD = libglint.a libglide.a libglimmer.a SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 glex_ebm_SOURCES = glex_ebm.F90
-glex_ebm_LDADD = libglint.a libglide.a libglimmer.a SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(NETCDF_LIBS)
+glex_ebm_LDADD = libglint.a libglide.a libglimmer.a SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 nc2config_SOURCES = nc2config.F90
-nc2config_LDADD = libglimmer.a $(NETCDF_LDFLAGS) $(NETCDF_LIBS)
+nc2config_LDADD = libglimmer.a $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 
 test_config_SOURCES = test_config.F90 glimmer_config.F90 glimmer_log.F90
 test_setup_SOURCES = test_setup.F90
-test_setup_LDADD = libglide.a libglimmer.a $(NETCDF_LDFLAGS) $(NETCDF_LIBS)
+test_setup_LDADD = libglide.a libglimmer.a $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 test_ts_SOURCES = glimmer_ts.F90 glimmer_log.F90 test_ts.F90
 test_lithot_SOURCES = test_lithot.F90
-test_lithot_LDADD = libclimate.a libglide.a libglimmer.a SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(NETCDF_LIBS)
+test_lithot_LDADD = libclimate.a libglide.a libglimmer.a SLAP_library/libslap.a $(BLAS_LIBS) $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 test_integrate_SOURCES = test_integrate.F90 glimmer_global.F90 \
                          glimmer_physcon.F90 glimmer_integrate.F90
 test_commandline_SOURCES = test_commandline.F90 glimmer_commandline.F90
-test_writestats_SOURCES = test_writestats.F90 glimmer_writestats.F90 writestats.c writestats.h
+test_writestats_SOURCES = test_writestats.F90 glimmer_writestats.F90 writestats.c writestats.h cfortran.h
 
 AM_FCFLAGS = $(NETCDF_CPPFLAGS) $(HDF5_CPPFLAGS)
-LDADD = $(NETCDF_LDFLAGS) $(NETCDF_LIBS)
+LDADD = $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 AM_CFLAGS=$(CFORTRAN_CFLAGS)
 
 #some special rules for automatically generating ncdf src code
@@ -117,13 +117,15 @@ $(RESTART_STEM)_body.inc $(RESTART_STEM)_head.inc: Makefile
 		echo '! Dummy include file - restarts not enabled' > $@
 endif
 
-# handling CVS versioning
-if HAVE_CVS
-glimmer_vers.F90:	$(srcdir)/CVS/Entries glimmer_vers.F90.in 
-		$(PYTHON) $(top_srcdir)/src/python/cvs_version.py \
-                $(srcdir)/CVS/Entries glimmer_vers.F90.in $@
-$(RESTART_STEM)_body.inc.in $(RESTART_STEM)_head.inc.in: $(RESTART_CODE) Makefile
+$(RESTART_STEM)_body.inc.in $(RESTART_STEM)_head.inc.in: $(RESTART_CODE)
 		$(PYTHON) $(top_srcdir)/src/python/make_restarts.py -o $(RESTART_STEM) $(RESTART_CODE)
+
+# handling subversion versioning
+if HAVE_SVN
+svnversion.sed::
+		./createSVNVersion.sh
+glimmer_vers.F90:	svnversion.sed glimmer_vers.F90.in
+		sed -f svnversion.sed glimmer_vers.F90.in > glimmer_vers.F90
 else
 glimmer_vers.F90:	glimmer_vers.F90.in
 		cp $< $@
