@@ -1,5 +1,5 @@
 bin_SCRIPTS=generate_ncvars.py f90_dependencies.py glimmer_profile.py glide_launch.py
-EXTRA_DIST = $(bin_SCRIPTS)
+EXTRA_DIST = $(bin_SCRIPTS) fort_interp.py  fort_parser.py make_restarts.py
 sge_DATA =  qsub_glide.sh
 sgedir = $(pkgdatadir)
 dist_sge_DATA = $(sge_DATA)
