@@ -1,3 +1,14 @@
+2009-07-30 Magnus Hagdorn
+ * configure.in: detect if we are compiling from subversion copy
+ * m4macros/netcdf.m4: need to add HDF5 linker flags
+ * src/fortran/Makefile.am: distribute cfortran.h, use HDF5_LDFLAGS, 
+   move where restart code is generated, generate subversion version string
+ * src/fortran/createSVNVersion.sh: simple shell script creating sed script
+   to fill in subversion string
+ * src/fortran/glimmer_vers.F90.in.in: rename variable
+ * src/python/Makefile.am: distribute restart files generator
+ * src/python/cvs_version.py: removed - not needed anymore
+
 2009-05-05 Magnus Hagdorn
  * src/fortran/eis_glide.F90: get elapsed wall clock time
  * src/fortran/eismint3_glide.F90: ditto
